objects/Plate_History__c.object
<CustomObject>
    <fields>
        <fullName>Plate_Assignment_Changed_Date__c</fullName>
        <label>Plate Assignment Changed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Plate_Type__c</fullName>
        <label>Plate Type</label>
        <picklist>
            <picklistValues>
                <fullName>Standard</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Crown</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Diplomatic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Investment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Personalised</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Special Issue</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Trade</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Plate__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Plate</label>
        <referenceTo>Plate__c</referenceTo>
        <relationshipLabel>Plates History</relationshipLabel>
        <relationshipName>Plates_History</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Registration_Plate__c</fullName>
        <formula>Plate__r.Registration_Plate_Number__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Registration Plate</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vehicle_Make__c</fullName>
        <formula>Vehicle__r.Vehicle_Make__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Vehicle Make</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vehicle_Model__c</fullName>
        <formula>Vehicle__r.Vehicle_Model__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Vehicle Model</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vehicle_Year__c</fullName>
        <formula>Vehicle__r.Year_Made__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Vehicle Year</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vehicle__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Vehicle</label>
        <referenceTo>Vehicle__c</referenceTo>
        <relationshipLabel>Plates History</relationshipLabel>
        <relationshipName>Plates_History</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Plate History</label>
    <nameField>
        <displayFormat>PH-{00000000}</displayFormat>
        <label>Plate History</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Plates History</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>